fix too long title at search list page

--- a/public/css/searchlist.css
+++ b/public/css/searchlist.css
@@ -74,11 +74,21 @@ h6 {
     height: 20px;
     max-height: 20px;
     margin-top: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1; /* number of lines to show */
 }
 
 .single-event-text .location {
     float: none;
     font-weight: 200;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1; /* number of lines to show */
 }
 
 .wells {
